--- a/avernus/index.html
+++ b/avernus/index.html
@@ -14,7 +14,7 @@
 				<header>
 					<h1>Avernus</h1>
 					<h4>minimal portfolio & blog template</h4>
-					<a href="https://themeforest.net/user/rad1ance_" class="custom_btn">Purchase Now</a>
+					<a href="https://www.codester.com/items/12218/avernus-minimal-portfolio-blog-template" class="custom_btn">Purchase Now</a>
 				</header>
 			</div>
 		</div>
